# eurmtl.me

./: .dockerignore  .env_sample  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  config_reader.py  docker-compose.yml  eurmtl_app.py  justfile  laboratory.py  load_test.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  start.py  utils.py  zip_css.py
.linters/: arch_test.py  check_changed.py
adr/: 0001-ai-first-docs-baseline.md  0002-telegram-oidc-pyjwt.md
config/: config_reader.py
db/: models.py  mongo.py  pool.py  reimport.py  requests.py  sql_models.py  sql_pool.py  sql_requests.py
deploy/: eurmtl.service
docs/: architecture.md  contracts.md  conventions.md  glossary.md  golden-principles.md  how_to.txt  quality-grades.md  remote_uri_usage.md  sep07auth.md  tasks.md
docs/runbooks/: local-test-mode-contract-address.md
infrastructure/repositories/: transaction_repository.py
other/: cache_tools.py  config_reader.py  grist_cache.py  grist_tools.py  gspread_tools.py  qr_tools.py  quart_tools.py  stellar_soroban.py  stellar_tools.py  tailscale.py  telegram_tools.py  web_tools.py
routers/: contracts.py  cup.py  decision.py  federal.py  grist.py  helpers.py  index.py  laboratory.py  mmwb.py  rely.py  remote.py  remote_sep07.py  remote_sep07_auth.py  sellers.py  sign_tools.py  tables.py  web_editor.py
services/: stellar_client.py  telegram_oidc.py  transaction_service.py  xdr_parser.py
services/contracts/: flow_service.py  registry.py
static/: Good_links_at_Stellar_Expert.user.js  decision.js  laboratory.js  main.js  telegram.focus.user.js
static/css/: chrota.css  cup.min.css  dark.css  eurmtl.css  main.css  main.min.css  z_dark.css
static/js/: address-generator-worker.js  bsn.js  i18.js  laboratory.js  main.js  toast.js  xdr_decode_toggle.js
static/lang/: en.json  ru.json
templates/: adduser.html  asset.html  base.html  bsn.html  contract_detail.html  contracts_list.html  contracts_send.html  cup.chart.html  cup.main.html  cup.orderbook.html  cup.swap.html  cup.trades.html  decision.html  edit_xdr.html  eurmtl_http_skill.md  generate.html  grist_tg_groups.html  grist_tg_info.html  index.html  ipfs_view.html  join_captcha.html  laboratory.html  llm.txt  mmwb_manage_data.html  mmwb_tools.html  robots.txt  seller.html  sep07hand.html  sep07test.html  sign_add.html  sign_all.html  sign_sign.html  stellar.toml  tabler_addr.html  tabler_asset.html  tabler_base.html  tabler_bot_login.html  tabler_decision.html  tabler_federation_addresses.html  tabler_laboratory.html  (+10 more)
tests/: README.md  conftest.py  test_cache_tools.py  test_config_reader.py  test_extract_sources.py  test_grist_cache.py  test_grist_tools.py  test_gspread_tools.py  test_qr_tools.py  test_quart_tools.py  test_security_functions.py  test_sql_pool.py  test_stellar_tools.py  test_stellar_tools_extra.py  test_tailscale.py  test_telegram_oidc_helpers.py  test_telegram_tools.py  test_web_tools_session_reuse.py  test_web_tools_timeout.py
tests/db/: test_sql_models_firebird.py
tests/fixtures/: __init__.py  app.py  constants.py  database.py  horizon.py
tests/routers/: test_contracts.py  test_cup.py  test_decision.py  test_federal.py  test_grist.py  test_helpers.py  test_index.py  test_laboratory.py  test_mmwb.py  test_rely.py  test_remote.py  test_remote_sep07.py  (+5 more)
utils/: grist_tools.py  gspread_utils.py  stellar_utils.py  telegram_utils.py  www_utils.py
(+43 files in other folders)
