[project]
name = "eurmtl"
version = "2025.07.20"
description = "EURMTL - Stellar MTL Platform"
authors = [
    {name = "Igor Tolstov", email = "attid0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "quart",
    "stellar-sdk",
    "sentry-sdk",
    "loguru",
    "cachetools",
    "sqlalchemy",
    "aiogram",
    "sulguk",
    "aiohttp",
    "asyncpg",
    "pydantic",
    "pydantic-settings",
    "python-multipart",
    "jinja2",
    "markupsafe",
    "pillow",
    "qrcode[pil]",
    "pymongo",
    "gspread",
    "google-auth",
    "uvloop; sys_platform != 'win32'",
    "hypercorn",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "environs>=14.2.0",
    "jsonpickle>=4.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "black",
    "isort",
    "flake8",
    "mypy",
    "pre-commit",
    "bandit",
    "safety",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["db", "other", "routers", "templates", "static"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[project.scripts]
eurmtl = "start:main"
