[project]
name = "eurmtl"
version = "2025.07.20"
description = "EURMTL - Stellar MTL Platform"
authors = [
    {name = "Igor Tolstov", email = "attid0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "quart",
    "stellar-sdk[aiohttp]",
    "sentry-sdk",
    "loguru",
    "cachetools",
    "sqlalchemy",
    "aiogram",
    "sulguk",
    "aiohttp",
    "asyncpg",
    "pydantic",
    "pydantic-settings",
    "python-multipart",
    "jinja2",
    "markupsafe",
    "pillow",
    "qrcode[pil]",
    "pymongo",
    "gspread",
    "google-auth",
    "uvloop; sys_platform != 'win32'",
    "uvicorn",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "environs>=14.2.0",
    "jsonpickle>=4.1.1",
    "python-dateutil>=2.9.0.post0",
    "fdb>=2.0.4",
    "sqlalchemy-firebird==2.0.2",
    "gspread-asyncio>=2.0.0",
    "quart-cors>=0.8.0",
    "sqlalchemy-firebird-async>=0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff>=0.15.0",
    "pyright>=1.1.408",
    "pytest-cov>=7.0.0",
    "aiosqlite>=0.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["db", "other", "routers", "templates", "static"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[project.scripts]
eurmtl = "start:main"
